# gmail-search

./: .gitignore  CLAUDE.md  LAYER_ANALYSIS_2026-04-19.md  OOM_INCIDENT_2026-04-18.md  PER_USER_LOGIN_2026-04-27.md  PROPOSITIONS_PROTOTYPE_2026-06-18.md  README.md  benchmark.py  config.yaml  docker-compose.yml  gmail-search-mcp.service  gmail-search-serve.service  gmail-search.service  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
deploy/caddy/: gms.caddy  install.sh
deploy/claudebox/: .gitignore  README.md  docker-compose.yml  setup.sh  start.sh  stop.sh
deploy/claudebox/claude-config/: CLAUDE.md.template  system-hint.txt
deploy/lnav/: README.md  gmail-search.json
deploy/logrotate/: gmail-search-logrotate.service  gmail-search-logrotate.timer  gmail-search.conf
docs/: DEEP_ANALYSIS_AGENT.md  SUPERVISOR.md
docs/notes/: PER_CONVERSATION_SESSIONS_2026-04-26.md  README.md  SCANN_COMPACTION_2026-04-27.md
docs/superpowers/plans/: 2026-04-14-gmail-search.md  2026-07-07-spam-filter-ab-eval.md
docs/superpowers/specs/: 2026-04-14-gmail-search-design.md  2026-07-07-spam-filter-ab-eval-design.md
sandbox/: Dockerfile  preamble.py  requirements.txt
scripts/: ab_api_diff.py  ab_queries.json  analyze_bench.py  analyze_bench2.py  analyze_bench3.py  analyze_w4.py  bench_per_user_scann_load.py  bench_phase0d_alter_table.sh  bench_prompts.py  bench_sample.json  bench_sample_200.json  bench_w4.py  build_bench_comparison.py  curate_bench_sample.py  launch_vllm_bench.sh  migrate_phase23.py  migrate_sqlite_to_pg.py  mockup_headline_detail.py  pg_slow.sh  refresh_disconnect.py  run_ab_servers.sh  run_deep_compare.py  run_deep_compare.sh  run_w4_200.sh  scann_compaction_eval.py  scann_compaction_eval2.py  scann_compaction_judge.py  scann_compaction_judge2.py  scann_compaction_judge3.py  scann_search_one.py  setup-dev.sh  spam_filter_judge.py  summary_quality_bench.py  web-dev-forever.sh
scripts/migrations/: thread_summary_topics_pk.sql
src/gmail_search/: aliases_llm.py  claudebox_creds.py  cli.py  config.py  jobs.py  locks.py  log_config.py  pipeline.py  propositions.py  reap.py  server.py  summarize.py  trace.py
src/gmail_search/agents/: __init__.py  analyst.py  auto_publish.py  cost.py  critic.py  gc.py  jsonl_tail.py  mcp_oauth.py  mcp_oauth_store.py  mcp_tools_server.py  orchestration.py  planner.py  retriever.py  runtime.py  runtime_claude.py  runtime_claude_native.py  sandbox.py  service.py  session.py  skills.py  tools.py  writer.py
src/gmail_search/auth/: __init__.py  routes.py  session.py  write_user.py
src/gmail_search/embed/: client.py  pipeline.py
src/gmail_search/extract/: __init__.py  archive.py  calendar.py  image.py  office.py  pdf.py  text.py
src/gmail_search/gmail/: auth.py  client.py  crawl_profile.py  disconnect_email_hosts.txt  drive.py  invite_guard.py  parser.py  url_extract.py  url_fetcher.py
src/gmail_search/index/: builder.py  searcher.py
src/gmail_search/llm/: __init__.py  backend.py  ollama.py  openrouter.py  vllm.py
src/gmail_search/search/: engine.py  parser.py
src/gmail_search/store/: cost.py  db.py  models.py  pg_index_followups.sql  pg_migration_crawl_backoff.sql  pg_migration_summarize_index.sql  pg_migration_summary_poison.sql  pg_schema.sql  queries.py
templates/: index.html
tests/: conftest.py  eval_invite_guard.py  test_agent_analyst.py  test_agent_cost.py  test_agent_gc.py  test_agent_instruction_templating.py  test_agent_orchestration.py  test_agent_runtime.py  test_agent_sandbox.py  test_agent_service.py  test_agent_service_race.py  test_agent_session.py  test_agent_skills.py  test_agent_subagents.py  test_agent_tools.py  test_aliases_llm.py  test_auth_session.py  test_auto_publish.py  test_before_after_upsert.py  test_builder_threads.py  test_claudebox_creds.py  test_cli.py  test_cli_update.py  test_config.py  test_credential_health.py  test_deep_failure_surfacing.py  test_delta_upsert.py  test_embed_client.py  test_embed_pipeline.py  test_extract_dispatch.py  test_extract_pdf.py  test_extractors.py  test_gmail_client_safety.py  test_gmail_parser.py  test_index_builder.py  test_index_pointer.py  test_index_searcher.py  test_invite_guard.py  test_jobs.py  test_jsonl_tail.py  (+34 more)
tests/integration/: README.md  _stack_probe.py  conftest.py  test_claude_native_e2e.py  test_claudebox_adapter_e2e.py  test_conversation_ui_round_trip_e2e.py  test_deep_run_via_http_e2e.py  test_mcp_side_channel_e2e.py  test_work_persistence_e2e.py
tests/perf/: README.md  baseline.json  conftest.py  harness.py  test_search_perf_gate.py
web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/battle/: page.tsx
web/app/deep/: page.tsx
web/app/inbox/: page.tsx
web/app/priority/: page.tsx
web/app/search/: page.tsx
web/app/settings/: page.tsx
web/components/: AdminConsole.tsx  ArtifactChip.tsx  AssistantWork.tsx  AttachmentChip.tsx  AttachmentInlineViewer.tsx  AuthContext.tsx  AuthGate.tsx  AvatarMenu.tsx  BattleMessage.tsx  BattlePanel.tsx  CitableMarkdown.tsx  CitationChip.tsx  ConversationSidebar.tsx  CorpusStatus.tsx  DebugIdBadge.tsx  DeepAnalysisView.tsx  DeepStagePart.tsx  Drawer.tsx  EmailBody.tsx  FacetSidebar.tsx  FileViewer.tsx  InboxView.tsx  JsonView.tsx  MarkdownText.tsx  MiddleTruncate.tsx  ModelPicker.tsx  PdfRenderer.tsx  PreviewContext.tsx  PreviewDrawer.tsx  PriorityInboxView.tsx  ReasoningPart.tsx  ResultRow.tsx  SearchView.tsx  SettingsView.tsx  SyncProgressCard.tsx  ThemeEffect.tsx  Thread.tsx  ThreadDrawer.tsx  ThreadDrawerContext.tsx  ToolCallUI.tsx  (+2 more)
web/lib/: agentStream.ts  attachmentCache.ts  backend.ts  battleVariants.ts  chatLog.ts  chatSettings.ts  citationCheck.ts  config.ts  datetime.ts  empty-module.js  extractThreadHints.ts  linkifyRefs.ts  messageParts.ts  prefs.ts  pricing.ts  sanitizeConversation.ts  sender.ts  sqlSchema.ts  systemPrompt.ts  threadCache.ts  tools.ts
web/scripts/: test-chat-api.mjs  test-units.mjs
web/types/: css-modules.d.ts
(+46 files in other folders)
