[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-genai>=1.0.0",
    "scann>=1.3.0",
    "pymupdf>=1.24.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "symspellpy>=6.7.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "icalendar>=6.0.0",
    "pillow-heif>=0.16.0",
    "dateparser>=1.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest", "requests"]

[project.scripts]
gmail-search = "gmail_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
