[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-genai>=1.0.0",
    "scann>=1.3.0",
    "pymupdf>=1.24.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "symspellpy>=6.7.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "icalendar>=6.0.0",
    "pillow-heif>=0.16.0",
    "dateparser>=1.2.0",
    "psutil>=5.9.0",
    # Postgres backend (paradedb + pg_search BM25). `psycopg[binary]`
    # pins the C-impl wheel so no local libpq-dev needed.
    "psycopg[binary,pool]>=3.1.18",
    "python-pptx>=1.0.0",
    "docx2txt>=0.8",  # fallback if LibreOffice not installed
    "xlrd>=2.0.0",  # legacy .xls (xlsx is openpyxl above)
    "gdown>=6.0.0",  # Drive URL parsing (gmail/drive.py)
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.3",  # Headless URL crawler fallback for gmail/url_fetcher.py
    # Primary HTTP fetch engine: libcurl + BoringSSL doing a REAL Chrome
    # TLS+HTTP2 handshake. Measured (2026-06-09) faster than httpx
    # (253ms vs 433ms median) AND cracks ~15-20% of anti-bot 403/TLS
    # walls that otherwise force the slow browser path. MIT-licensed,
    # widely used. We follow redirects manually (allow_redirects=False)
    # so the per-hop SSRF guard still runs — libcurl must not redirect.
    "curl_cffi>=0.7",
    # Floors bumped after `pip-audit` surfaced patchable CVEs in the
    # anaconda baseline (urllib3 streaming/redirect family, requests
    # extract_zipped_paths, nltk downloader / wordnet_app). These are
    # transitive deps; we don't import them directly, but crawl4ai
    # does for model/NLTK-data downloads at setup time.
    "urllib3>=2.5.0",
    "requests>=2.33.0",
    "nltk>=3.9.4",
    # Multi-tenant Phase 1: HS256 Bearer JWT verification (issued by NextAuth,
    # consumed by FastAPI). PyJWT chosen over python-jose: PyJWT is the
    # actively-maintained reference implementation and has cleaner CVE
    # history. Used only inside auth/session.py — not a transitive surface
    # we expose to crawled content or LLM-controlled inputs.
    "pyjwt>=2.9.0",
    # Structured (JSON) logging — a pure-Python stdlib logging.Formatter, no
    # transitive deps. Only active when GMS_LOG_JSON=1; otherwise logs stay
    # human-readable. >=3.1 for the `pythonjsonlogger.json` import path.
    "python-json-logger>=3.1",
]

[project.optional-dependencies]
dev = ["pytest", "requests", "ruff>=0.5"]

[project.scripts]
gmail-search = "gmail_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires live MCP+claudebox+postgres+gmail-search stack; opt-in via pytest -m integration",
    "perf_slow: search perf gate that builds a ~10GB ScaNN engine (~100s) or drives live HTTP; opt-in via pytest -m perf_slow",
]
addopts = "-m 'not integration and not perf_slow'"

[tool.ruff.lint]
# Gate on Pyflakes (F) — these are correctness bugs, not style: F821 undefined
# names (e.g. an import the auto-formatter stripped while the name is still
# used — the exact failure the pre-commit gate exists to stop), F401 unused
# imports, F811 redefinitions. Keep this tight so the gate has ~zero false
# positives and stays trustworthy.
select = ["F"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing: tests/test_index_builder.py has two diverged copies of the same
# test names (only the later set runs under pytest). That's a real test bug to
# resolve separately; ignore F811 here so the gate is green meanwhile.
# TODO: dedupe the shadowed tests and remove this ignore.
"tests/test_index_builder.py" = ["F811"]
